fixed a few layout issues - added copy paste

--- a/src/styles/molecules/layout/blocks.styl
+++ b/src/styles/molecules/layout/blocks.styl
@@ -21,4 +21,4 @@
 @media (min-width: 600px) and (max-width: 960px)
     .block-15
     .block-20
-        flex-basis: 50%
+        flex-basis: 33%
