--- a/src/styles/molecules/layout/container.styl
+++ b/src/styles/molecules/layout/container.styl
@@ -1,3 +1,7 @@
 .container
     flex-basis: 60%
     align-self: center
+
+@media (min-width: 1600px)
+    .container
+        max-width: 960px
