--- a/src/styles/molecules/navigation/primary.styl
+++ b/src/styles/molecules/navigation/primary.styl
@@ -8,8 +8,14 @@
         li
             text-align: center
             flex-grow: 1
-            padding: 1rem
+            padding-top: 1rem
+            padding-bottom: 0.5rem
+            margin-left: 1rem
+            margin-right: 1rem
+            cursor: pointer
             a
                 text-decoration: none
                 color: $primary-200
-                cursor: pointer
+
+            &:hover
+                border-bottom: 1px solid $primary-200
