--- a/src/styles/molecules/tabs/snippet.styl
+++ b/src/styles/molecules/tabs/snippet.styl
@@ -16,3 +16,9 @@
     color: $primary-700
     min-height: 7rem
     font-weight: 400
+    box-sizing: border-box
+    textarea
+        min-height: 7rem
+        width: 100%
+        max-width: 100%
+        box-sizing: border-box
